# TxMineFlow

./: .gitignore  README.md  environment.yml  main.nf  nextflow.config  pyproject.toml
conf/: base.config  test.config
data/: counts.tsv  samplesheet.tsv
docs/: STRUCTURE.md
modules/local/: compare.nf  differential_expression.nf  results_to_duckdb.nf  subtype.nf
notebooks/: 01_explore.ipynb
projects/: example_brca.yaml
reports/: analysis_report.qmd
subworkflows/local/: mining.nf
txmineflow/: cli.py  project.py
